--- a/cv.html
+++ b/cv.html
@@ -28,15 +28,121 @@
 
 <body>
 
+    <header class="header text-center">
+        <div class="row">
+            <div class="col-4 mx-auto ">
+                <div class="card border-0 rounded-0">
+                    <img src="assets/img/headshot.jpg" class="card-img-top rounded-circle img-thumbnail mx-auto mt-4"
+                        alt="Imagen del rostro de Susana Márquez">
+                    <h1 class="fw-bolder pt-4">Susana Márquez H.</h1>
+                    <div class="card-body text-center">
+                        <hr>
+                        <div class="card-text text-start">
+                            <p><i class="fa-solid fa-phone pe-2"></i> +56991112233 </p>
+                            <p><i class="fa-solid fa-envelope pe-2"></i> susi.mq@gmail.com</p>
+                            <p></p><i class="fa-solid fa-location-dot pe-2"></i> Santiago, Region Metropolitana, Chile
+                            </p>
+                            <div class="bg-light text-dark mt-5 p-2 border rounded lh-lg">
+                                <h5 class="text-center py-2 fw-bolder">Dominio</h5>
+                                <ul>
+                                    <li>HTML: Avanzado</li>
+                                    <li>CSS: Avanzado</li>
+                                    <li>Python: Intermedio</li>
+                                    <li>Ruby on Rails: Intermedio</li>
+                                    <li>Cloud: Intermedio</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 mx-auto pt-5 px-2">
+                <!-- <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4"> -->
+                <div class="card border-0 rounded-0">
+                    <div class=" bg-light border rounded p-4">
+                        <h3 class="pt-1 fs-1"> Carrera </h3>
+                        <p class="text-start"> Motivada por 10 años de experiencia en el desarrollo web. Reconocida por
+                            liderar
+                            proyectos en toda su producción, desde el área de UX/UI hasta el deploy completo de los
+                            productos. Cooperadora, muy organizada y con grandes habilidades para trabajar dentro de
+                            y liderar equipos multidisciplinarios.
+                        </p>
+                        <div class=" fw-bolder text-start p-3">
+                            <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
+                                    class="fa-solid fa-location-pin ms-2"></i> Google HeadQuarters N.Y.C <i
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2018-2022
+                            </p>
+                            <p> <i class="fa-regular fa-user"></i> Diseñador UX/UI <i
+                                    class="fa-solid fa-location-pin ms-2"></i> Google HeadQuarters N.Y.C <i
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2016-2018
+                            </p>
+                            <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
+                                    class="fa-solid fa-location-pin ms-2"></i> Entel, Chile <i
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2013-2016
+                            </p>
+                            <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
+                                    class="fa-solid fa-location-pin ms-2"></i> Desafío Latam, Chile <i
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2010-2013
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="card-body text-center">
+                        <div class="card-text mt-4">
+                            <p class="fw-bolder">Gran dominio de los idiomas lo que le permite ser una herramienta
+                                indispensable a la hora
+                                de concretar clientes del extranjero
+                            </p>
+
+                            <ul class="border rounded-pill p-4 text-center">
+                                <li>Español: Nativo</li>
+                                <li>Ingles: Avanzado</li>
+                                <li>Frances: Avanzado</li>
+                                <li>Koreano: Intermedio</li>
+                                <li>Italiano: Intermedio</li>
+                            </ul>
+
+                            <a href="https://susimarquez.github.io" target="_blank"
+                                rel="noopener noreferrer" class="btn btn-dark m-4 p-3"> Ir a Portafolio</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+    </header>
+
+
+
+
+    <footer>
+        <div class=" footer container-fluid ps-5 bg-secondary p-4 text-light fs-3 text-center">
+            <div class="socials">
+                <a class="navbar-brand px-3" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a>
+                <a class="navbar-brand px-3" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a class="navbar-brand px-3" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a class="navbar-brand px-3" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+                <a class="navbar-brand px-3" href="https://github.com/SusiMarquez" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+
+
+    </footer>
 
 
 
 
 
 
-
-
-    
 </body>
 
 </html>
