--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/aldonza-page.png" class="card-img-top rounded"
-                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                        alt="Imagen de parte del proyecto de landing page para Aldonza Dubois">
                     <div class="card-body text-center">
                         <h4 class="card-title fw-bold text-dark">Aldonza Dubois</h4>
                         <hr>
@@ -169,7 +169,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/tejeriles.png" class="card-img-top rounded"
-                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                        alt="Imagen de parte del proyecto de landing page para la tienda Tejeriles">
                     <div class="card-body text-center">
                         <h4 class="card-title fw-bold text-dark">Tejeriles</h4>
                         <hr>
@@ -183,9 +183,9 @@
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/landing-plantas.png" class="card-img-top rounded"
-                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                        alt="Imagen de parte del proyecto de landing page para Tienda Decoplantas">
                     <div class="card-body text-center">
-                        <h4 class="card-title fw-bold text-dark">Plantas de Interior</h4>
+                        <h4 class="card-title fw-bold text-dark"> DecoPlantas</h4>
                         <hr>
                         <p class="card-text"> Landing Page prototipo para una famosa tienda de plantas de interior
                         </p>
@@ -197,7 +197,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/kuki-page.png" class="card-img-top rounded"
-                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                        alt="Imagen de parte del proyecto de landing page de curriculum vitae de perrita Kuki">
                     <div class="card-body text-center">
                         <h4 class="card-title fw-bold text-dark">CV perrita Kuki</h4>
                         <hr>
